Nav Spacing Fixed

--- a/src/css/03-module/_navs.sass
+++ b/src/css/03-module/_navs.sass
@@ -3,7 +3,7 @@
   font-family: $sans-font
 
   &--item
-    margin: 0 10px 0 0
+    margin: 0 5px 0 0
     display: inline-block
     letter-spacing: 0.5px
       
@@ -14,6 +14,5 @@
       color: $bluehover
 
     @media (min-width: 640px)
-      display: inline-block
-      margin: 0 0 3px
+      margin: 0 3px 3px
       
